init from my own config

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://haikalrsy.github.io/portfolio-Haikal",
+  "homepage": "https://haikalrsy.github.io/portfolio-haikal",
   "name": "threejs-3d-portfolio",
   "private": true,
   "version": "1.0.0",
